objects/Cluster__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Lead_ID__c</fullName>
        <formula>Sales_Lead__r.Id</formula>
        <label>Cluster Sales Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Manager_Role__c</fullName>
        <formula>Cluster_Sales_Manager__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SFDC Role Name</inlineHelpText>
        <label>Cluster Sales Manager Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clusters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Buildings__c</fullName>
        <description>populated by a declarative rollup summary</description>
        <inlineHelpText>Number of buildings assigned to this cluster</inlineHelpText>
        <label>Number of Buildings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Lead_Role__c</fullName>
        <formula>Sales_Lead__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SFDC Role Name</inlineHelpText>
        <label>Sales Lead Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>&gt;&gt;&gt;used for ROE assignment</inlineHelpText>
        <label>Sales Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clusters</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cluster</label>
    <nameField>
        <label>Cluster</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clusters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cluster_Sales_Manager__c</columns>
        <columns>Cluster_Sales_Manager_Role__c</columns>
        <columns>Sales_Lead__c</columns>
        <columns>Sales_Lead_Role__c</columns>
        <columns>Number_of_Buildings__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>